--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
+    "@eslint-react/eslint-plugin": "^1.52.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "eslint": "^9.31.0",
+    "eslint-plugin-better-tailwindcss": "^3.6.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
