--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
     "@mantine/core": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
